# clitron

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: ci.yml
clitron/: Cargo.toml
clitron/src/: command.rs  context.rs  error.rs  interpreter.rs  lib.rs  model.rs  progress.rs  schema.rs
clitron/src/model/: candle_backend.rs
hgh/: Cargo.toml  README.md
hgh/src/: main.rs
schemas/: gh.yaml
specs/: architecture.md  hgh-cli.md  model.md  rust-lib.md  training.md
training/: README.md  pyproject.toml
training/configs/: dpo_config.yaml  sft_config.yaml
training/data/gh/: generate_manual.py  preferences.jsonl  train.jsonl  train_val.jsonl
training/scripts/: run_training.sh
training/src/clitron_training/: __init__.py  evaluate.py  generate_dataset.py  generate_preferences.py  quantize.py  train_dpo.py  train_sft.py
