[package]
name = "hgh"
description = "Human-friendly GitHub CLI powered by clitron"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "hgh"
path = "src/main.rs"

[dependencies]
clitron = { path = "../clitron" }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
